not finished yet, but will soon.
Does not function as I want to

--- a/css/styles.css
+++ b/css/styles.css
@@ -675,3 +675,42 @@ border-style: inherit;
 .hero-content {
 	
 }
+
+ul{ 
+list-style-type: none;
+	margin: auto;
+  width: 85%;
+  padding: 10px;
+
+}
+li{ 
+background-color: #ADABE8; 
+	color: white;
+	padding: 10px;
+	margin-bottom: 40px;
+	margin-top: 10px;
+}
+.newitem { 
+margin: auto;
+width:42%;
+  padding: auto;
+	color:#6963D3; 
+}
+.inputstyle { 
+color: white;
+	background-color:#6963D3;
+	border-radius: 12px;
+	padding: 20px;
+}
+.buttonstyle{ 
+border-radius: 50%;
+	padding-left:5px;
+	padding-right: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #FEE2B5;
+	color:#6963D3;
+
+
+}
+
